--- a/public_html/roomwithboxes.html
+++ b/public_html/roomwithboxes.html
@@ -1,75 +1,37 @@
-
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<title>three.js webgl - geometry - cube</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-		<style>
-			body {
-				margin: 0px;
-				background-color: #000000;
-				overflow: hidden;
-			}
-		</style>
-	</head>
-	<body>
+<html>
+<head lang="en">
+	<meta charset="utf-8">
+</head>
+<body>
 
-		<script src="js/three.js"></script>
+	<script src="js/three.js"></script>
+<script>
+	var renderer = new THREE.WebGLRenderer();
+	renderer.setSize(window.innerWidth, window.innerHeight);
+	document.body.appendChild(renderer.domElement);
 
-		<script>
+	var camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 1, 1000);
+	camera.position.y = -450;
+	camera.position.z = 400;
+	camera.rotation.x = .75;
 
-			var camera, scene, renderer;
-			var mesh;
+	var scene = new THREE.Scene();
 
-			init();
-			animate();
+	var plane = new THREE.Mesh(new THREE.PlaneGeometry(300, 300), new THREE.MeshNormalMaterial);
+	scene.add(plane);
 
-			function init() {
+	var cube = new THREE.Mesh(new THREE.CubeGeometry (10, 10, 10, 10, 10, 10), new THREE.MeshPhongMaterial);
+	scene.add(cube);
 
-				camera = new THREE.PerspectiveCamera( 70, window.innerWidth / window.innerHeight, 1, 1000 );
-				camera.position.z = 400;
+	renderer.render(scene, camera);
+</script>
 
-				scene = new THREE.Scene();
 
-				var geometry = new THREE.BoxBufferGeometry( 200, 200, 200 );
-				var material = new THREE.MeshBasicMaterial( { map: texture } );
 
-				mesh = new THREE.Mesh( geometry, material );
-				scene.add( mesh );
+</body>
 
-				renderer = new THREE.WebGLRenderer();
-				renderer.setPixelRatio( window.devicePixelRatio );
-				renderer.setSize( window.innerWidth, window.innerHeight );
-				document.body.appendChild( renderer.domElement );
 
-				//
 
-				window.addEventListener( 'resize', onWindowResize, false );
 
-			}
-
-			function onWindowResize() {
-
-				camera.aspect = window.innerWidth / window.innerHeight;
-				camera.updateProjectionMatrix();
-
-				renderer.setSize( window.innerWidth, window.innerHeight );
-
-			}
-
-			function animate() {
-
-				requestAnimationFrame( animate );
-
-				mesh.rotation.x += 0.005;
-				mesh.rotation.y += 0.01;
-
-				renderer.render( scene, camera );
-
-			}
-
-		</script>
-
-	</body>
 </html>
