--- a/public_html/moving_around_with_table.html
+++ b/public_html/moving_around_with_table.html
@@ -298,7 +298,7 @@
 
 			}
 			var loader = new THREE.JSONLoader();
-			loader.load('images/desk.json', function(geometry) {
+			loader.load('images/deskv2.json', function(geometry) {
 
 				//scene.add(mesh);
 				for (var i = 0; i < 500; i++) {
