--- a/public_html/moving_around_with_table.html
+++ b/public_html/moving_around_with_table.html
@@ -305,13 +305,11 @@
 
 
 
-					var _temp;
-					_temp = obj;
 
 
-					scene.add(_temp);
+					scene.add(obj);
 
-				
+
 			});
 
 			/*var loader = new THREE.JSONLoader();
