--- a/public_html/tables_s2s.html
+++ b/public_html/tables_s2s.html
@@ -215,7 +215,7 @@
 						break;
 
 					case 32: // space
-						if (canJump === true) velocity.y += 350;
+						if (canJump === true) velocity.y += 200;
 						canJump = false;
 						break;
 
@@ -256,36 +256,60 @@
 
 			raycaster = new THREE.Raycaster(new THREE.Vector3(), new THREE.Vector3(0, -1, 0), 0, 10);
 
-			// floor
+			/*Floor*/
 
-			geometry = new THREE.PlaneGeometry(2000, 2000, 100, 100);
+			geometry = new THREE.PlaneGeometry(100, 100, 100, 100);
 			geometry.rotateX(-Math.PI / 2);
 
-			/*for (var i = 0, l = geometry.vertices.length; i < l; i++) {
-
-				var vertex = geometry.vertices[i];
-				vertex.x += Math.random() * 20 - 10;
-				vertex.y += Math.random() * 2;
-				vertex.z += Math.random() * 20 - 10;
-
-			}*/
-
-			/*for (var i = 0, l = geometry.faces.length; i < l; i++) {
-
-				var face = geometry.faces[i];
-				face.vertexColors[0] = new THREE.Color().setHSL(Math.random() * 0.3 + 0.5, 0.75, Math.random() * 0.25 + 0.75);
-				face.vertexColors[1] = new THREE.Color().setHSL(Math.random() * 0.3 + 0.5, 0.75, Math.random() * 0.25 + 0.75);
-				face.vertexColors[2] = new THREE.Color().setHSL(Math.random() * 0.3 + 0.5, 0.75, Math.random() * 0.25 + 0.75);
-
-			}*/
-
 			material = new THREE.MeshBasicMaterial({
-
-				color: '#FF0000'
+				color: '#CCCCCC'
 			});
 
 			mesh = new THREE.Mesh(geometry, material);
 			scene.add(mesh);
+
+			var wallHeight = 10;
+			var texture = THREE.ImageUtils.loadTexture("/images/whiteBrickTexture.jpg");
+
+			material = new THREE.MeshLambertMaterial({
+				map: texture
+			});
+
+			/*Wall 1*/
+			geometry = new THREE.Mesh(new THREE.PlaneGeometry(100, wallHeight), material);
+			geometry.material.side = THREE.DoubleSide;
+			geometry.rotateY(-Math.PI / 2);
+			geometry.position.x = Math.floor(50);
+			geometry.position.y = Math.floor(wallHeight / 2);
+
+			scene.add(geometry);
+
+			/*Wall 2*/
+			geometry = new THREE.Mesh(new THREE.PlaneGeometry(100, wallHeight), material);
+			geometry.material.side = THREE.DoubleSide;
+			geometry.rotateY(-Math.PI / 2);
+			geometry.position.x = Math.floor(-50);
+			geometry.position.y = Math.floor(wallHeight / 2);
+
+			scene.add(geometry);
+
+			/*Wall 3*/
+			geometry = new THREE.Mesh(new THREE.PlaneGeometry(100, wallHeight), material);
+			geometry.material.side = THREE.DoubleSide;
+			geometry.rotateY(-Math.PI);
+			geometry.position.z = Math.floor(-50);
+			geometry.position.y = Math.floor(wallHeight / 2);
+
+			scene.add(geometry);
+
+			/*Wall 4*/
+			geometry = new THREE.Mesh(new THREE.PlaneGeometry(100, wallHeight), material);
+			geometry.material.side = THREE.DoubleSide;
+			geometry.rotateY(-Math.PI);
+			geometry.position.z = Math.floor(50);
+			geometry.position.y = Math.floor(wallHeight / 2);
+
+			scene.add(geometry);
 
 			// objects
 
@@ -416,52 +440,89 @@
 		}
 
 		function animate() {
+			var limitXMax = 50;
+			var limitXMin = -50;
+
+			var limitZMax = 50;
+			var limitZMin = -50;
 
 			requestAnimationFrame(animate);
 
 			if (controlsEnabled) {
-				raycaster.ray.origin.copy(controls.getObject().position);
-				raycaster.ray.origin.y -= 10;
+				var currentX = controls.getObject().position.x;
+				var currentZ = controls.getObject().position.z;
 
-				var intersections = raycaster.intersectObjects(objects);
+				var outOfLimitsX = true;
+				var outOfLimitsZ = true;
 
-				var isOnObject = intersections.length > 0;
-
-				var time = performance.now();
-				var delta = (time - prevTime) / 1000;
-
-				velocity.x -= velocity.x * 10.0 * delta;
-				velocity.z -= velocity.z * 10.0 * delta;
-
-				velocity.y -= 9.8 * 100.0 * delta; // 100.0 = mass
-
-				if (moveForward) velocity.z -= 400.0 * delta;
-				if (moveBackward) velocity.z += 400.0 * delta;
-
-				if (moveLeft) velocity.x -= 400.0 * delta;
-				if (moveRight) velocity.x += 400.0 * delta;
-
-				if (isOnObject === true) {
-					velocity.y = Math.max(0, velocity.y);
-
-					canJump = true;
+				if (currentX < limitXMax && currentX > limitXMin) {
+					outOfLimitsX = false;
+				}
+				if (currentZ < limitZMax && currentZ > limitZMin) {
+					outOfLimitsZ = false;
 				}
 
-				controls.getObject().translateX(velocity.x * delta);
-				controls.getObject().translateY(velocity.y * delta);
-				controls.getObject().translateZ(velocity.z * delta);
+				if (!outOfLimitsX && !outOfLimitsZ) {
+					raycaster.ray.origin.copy(controls.getObject().position);
+					raycaster.ray.origin.y -= 10;
 
-				if (controls.getObject().position.y < 10) {
+					var intersections = raycaster.intersectObjects(objects);
 
-					velocity.y = 0;
-					controls.getObject().position.y = 10;
+					var isOnObject = intersections.length > 0;
 
-					canJump = true;
+					var time = performance.now();
+					var delta = (time - prevTime) / 1000;
+
+					velocity.x -= velocity.x * 10.0 * delta;
+					velocity.z -= velocity.z * 10.0 * delta;
+
+					velocity.y -= 9.8 * 100.0 * delta; // 100.0 = mass
+
+					if (moveForward) velocity.z -= 400.0 * delta;
+					if (moveBackward) velocity.z += 400.0 * delta;
+
+					if (moveLeft) velocity.x -= 400.0 * delta;
+					if (moveRight) velocity.x += 400.0 * delta;
+
+					if (isOnObject === true) {
+						velocity.y = Math.max(0, velocity.y);
+
+						canJump = true;
+					}
+
+					controls.getObject().translateX(velocity.x * delta);
+					controls.getObject().translateY(velocity.y * delta);
+					controls.getObject().translateZ(velocity.z * delta);
+
+					if (controls.getObject().position.y < 10) {
+
+						velocity.y = 0;
+						controls.getObject().position.y = 10;
+
+						canJump = true;
+
+					}
+
+					prevTime = time;
+
+				} else {
+					if (outOfLimitsX) {
+						if (currentX > 0) {
+							controls.getObject().position.x = controls.getObject().position.x - 10;
+						} else {
+							controls.getObject().position.x = controls.getObject().position.x + 10;
+						}
+					}
+					if (outOfLimitsZ) {
+						if (currentZ > 0) {
+							controls.getObject().position.z = controls.getObject().position.z - 10;
+						} else {
+							controls.getObject().position.z = controls.getObject().position.z + 10;
+						}
+					}
+
 
 				}
-
-				prevTime = time;
-
 			}
 
 			renderer.render(scene, camera);
