--- a/public_html/s2s_v1.html
+++ b/public_html/s2s_v1.html
@@ -64,7 +64,6 @@
 	</div>
 
 	<script>
-
 		var camera, scene, renderer;
 		var geometry, material, mesh;
 		var controls;
@@ -167,6 +166,7 @@
 		init();
 		animate();
 
+
 		var controlsEnabled = false;
 
 		var moveForward = false;
@@ -192,6 +192,159 @@
 			controls = new THREE.PointerLockControls(camera);
 			scene.add(controls.getObject());
 
+			initKeyStrokes();
+
+
+			raycaster = new THREE.Raycaster(new THREE.Vector3(), new THREE.Vector3(0, -1, 0), 0, 10);
+
+			var _building = returnRoom();
+			for (var i = 0; i < _building.length; i++) {
+				scene.add(_building[i]);
+			}
+
+			var loader = new THREE.ObjectLoader();
+			loader.load('images/deskv7.json', function(obj) {
+
+				scene.add(obj);
+				objects.push(obj);
+			});
+
+			var geometry = new THREE.BoxGeometry(5, 3, 5);
+
+			var material = new THREE.MeshLambertMaterial({
+				color: 0xFF0000
+			});
+			var mesh = new THREE.Mesh(geometry, material);
+			mesh.position.x = Math.floor(25);
+			mesh.position.y = Math.floor(6);
+			scene.add(mesh);
+			objects.push(mesh);
+
+			var loader = new THREE.ObjectLoader();
+			loader.load('images/deskv7.json', function(obj) {
+				obj.position.x = Math.floor(47);
+				obj.position.y = Math.floor(0);
+				obj.position.z = Math.floor(40);
+				obj.rotation.y = Math.PI / 2;
+				scene.add(obj);
+				objects.push(obj);
+			});
+
+			//
+
+			renderer = new THREE.WebGLRenderer();
+			renderer.setClearColor(0xffffff);
+			renderer.setPixelRatio(window.devicePixelRatio);
+			renderer.setSize(window.innerWidth, window.innerHeight);
+			document.body.appendChild(renderer.domElement);
+
+			//
+
+			window.addEventListener('resize', onWindowResize, false);
+
+		}
+
+		function onWindowResize() {
+
+			camera.aspect = window.innerWidth / window.innerHeight;
+			camera.updateProjectionMatrix();
+
+			renderer.setSize(window.innerWidth, window.innerHeight);
+
+		}
+
+		function animate() {
+			var limitXMax = 50;
+			var limitXMin = -50;
+
+			var limitZMax = 50;
+			var limitZMin = -50;
+
+			requestAnimationFrame(animate);
+
+			if (controlsEnabled) {
+				var currentX = controls.getObject().position.x;
+				var currentZ = controls.getObject().position.z;
+
+				var outOfLimitsX = true;
+				var outOfLimitsZ = true;
+
+				if (currentX < limitXMax && currentX > limitXMin) {
+					outOfLimitsX = false;
+				}
+				if (currentZ < limitZMax && currentZ > limitZMin) {
+					outOfLimitsZ = false;
+				}
+
+				if (!outOfLimitsX && !outOfLimitsZ) {
+					raycaster.ray.origin.copy(controls.getObject().position);
+					raycaster.ray.origin.y -= 7;
+
+					var intersections = raycaster.intersectObjects(objects);
+
+					var isOnObject = intersections.length > 0;
+
+					var time = performance.now();
+					var delta = (time - prevTime) / 1000;
+
+					velocity.x -= velocity.x * 10.0 * delta;
+					velocity.z -= velocity.z * 10.0 * delta;
+
+					velocity.y -= 9.8 * 100.0 * delta; // 100.0 = mass
+
+					if (moveForward) velocity.z -= 400.0 * delta;
+					if (moveBackward) velocity.z += 400.0 * delta;
+
+					if (moveLeft) velocity.x -= 400.0 * delta;
+					if (moveRight) velocity.x += 400.0 * delta;
+
+					if (isOnObject === true) {
+						velocity.y = Math.max(0, velocity.y);
+
+						canJump = true;
+					}
+
+					controls.getObject().translateX(velocity.x * delta);
+					controls.getObject().translateY(velocity.y * delta);
+					controls.getObject().translateZ(velocity.z * delta);
+
+					if (controls.getObject().position.y < 7) {
+
+						velocity.y = 0;
+						controls.getObject().position.y = 7;
+
+						canJump = true;
+
+					}
+
+					prevTime = time;
+
+				} else {
+					if (outOfLimitsX) {
+						if (currentX > 0) {
+							controls.getObject().position.x = controls.getObject().position.x - 10;
+						} else {
+							controls.getObject().position.x = controls.getObject().position.x + 10;
+						}
+					}
+					if (outOfLimitsZ) {
+						if (currentZ > 0) {
+							controls.getObject().position.z = controls.getObject().position.z - 10;
+						} else {
+							controls.getObject().position.z = controls.getObject().position.z + 10;
+						}
+					}
+
+
+				}
+			}
+
+			renderer.render(scene, camera);
+
+		}
+
+
+		function initKeyStrokes() {
 			var onKeyDown = function(event) {
 
 				switch (event.keyCode) {
@@ -255,164 +408,6 @@
 
 			document.addEventListener('keydown', onKeyDown, false);
 			document.addEventListener('keyup', onKeyUp, false);
-
-			raycaster = new THREE.Raycaster(new THREE.Vector3(), new THREE.Vector3(0, -1, 0), 0, 10);
-
-			/*Floor*/
-			geometry = new THREE.PlaneGeometry(100, 100, 100, 100);
-			geometry.rotateX(-Math.PI / 2);
-			material = new THREE.MeshBasicMaterial({
-				color: '#CCCCCC'
-			});
-			mesh = new THREE.Mesh(geometry, material);
-			scene.add(mesh);
-
-			var _walls = returnWalls();
-			for (var i = 0; i < _walls.length; i ++){
-				scene.add(_walls[i]);
-			}
-
-			// objects
-
-			geometry = new THREE.BoxGeometry(20, 20, 20);
-
-			for (var i = 0, l = geometry.faces.length; i < l; i++) {
-
-				var face = geometry.faces[i];
-				face.vertexColors[0] = new THREE.Color().setHSL(Math.random() * 0.3 + 0.5, 0.75, Math.random() * 0.25 + 0.75);
-				face.vertexColors[1] = new THREE.Color().setHSL(Math.random() * 0.3 + 0.5, 0.75, Math.random() * 0.25 + 0.75);
-				face.vertexColors[2] = new THREE.Color().setHSL(Math.random() * 0.3 + 0.5, 0.75, Math.random() * 0.25 + 0.75);
-
-			}
-
-			var loader = new THREE.ObjectLoader();
-			loader.load('images/deskv7.json', function(obj) {
-
-				scene.add(obj);
-
-			});
-
-			var loader = new THREE.ObjectLoader();
-			loader.load('images/deskv7.json', function(obj) {
-				obj.position.x = Math.floor(10);
-				obj.position.y = Math.floor(0);
-				obj.position.z = Math.floor(10);
-				obj.rotation.y = Math.PI / 2;
-				scene.add(obj);
-
-			});
-
-		
-			//
-
-			renderer = new THREE.WebGLRenderer();
-			renderer.setClearColor(0xffffff);
-			renderer.setPixelRatio(window.devicePixelRatio);
-			renderer.setSize(window.innerWidth, window.innerHeight);
-			document.body.appendChild(renderer.domElement);
-
-			//
-
-			window.addEventListener('resize', onWindowResize, false);
-
-		}
-
-		function onWindowResize() {
-
-			camera.aspect = window.innerWidth / window.innerHeight;
-			camera.updateProjectionMatrix();
-
-			renderer.setSize(window.innerWidth, window.innerHeight);
-
-		}
-
-		function animate() {
-			var limitXMax = 50;
-			var limitXMin = -50;
-
-			var limitZMax = 50;
-			var limitZMin = -50;
-
-			requestAnimationFrame(animate);
-
-			if (controlsEnabled) {
-				var currentX = controls.getObject().position.x;
-				var currentZ = controls.getObject().position.z;
-
-				var outOfLimitsX = true;
-				var outOfLimitsZ = true;
-
-				if (currentX < limitXMax && currentX > limitXMin) {
-					outOfLimitsX = false;
-				}
-				if (currentZ < limitZMax && currentZ > limitZMin) {
-					outOfLimitsZ = false;
-				}
-
-				if (!outOfLimitsX && !outOfLimitsZ) {
-					raycaster.ray.origin.copy(controls.getObject().position);
-					raycaster.ray.origin.y -= 10;
-
-					var intersections = raycaster.intersectObjects(objects);
-
-					var isOnObject = intersections.length > 0;
-
-					var time = performance.now();
-					var delta = (time - prevTime) / 1000;
-
-					velocity.x -= velocity.x * 10.0 * delta;
-					velocity.z -= velocity.z * 10.0 * delta;
-
-					velocity.y -= 9.8 * 100.0 * delta; // 100.0 = mass
-
-					if (moveForward) velocity.z -= 400.0 * delta;
-					if (moveBackward) velocity.z += 400.0 * delta;
-
-					if (moveLeft) velocity.x -= 400.0 * delta;
-					if (moveRight) velocity.x += 400.0 * delta;
-
-					if (isOnObject === true) {
-						velocity.y = Math.max(0, velocity.y);
-
-						canJump = true;
-					}
-
-					controls.getObject().translateX(velocity.x * delta);
-					controls.getObject().translateY(velocity.y * delta);
-					controls.getObject().translateZ(velocity.z * delta);
-
-					if (controls.getObject().position.y < 10) {
-
-						velocity.y = 0;
-						controls.getObject().position.y = 10;
-
-						canJump = true;
-
-					}
-
-					prevTime = time;
-
-				} else {
-					if (outOfLimitsX) {
-						if (currentX > 0) {
-							controls.getObject().position.x = controls.getObject().position.x - 10;
-						} else {
-							controls.getObject().position.x = controls.getObject().position.x + 10;
-						}
-					}
-					if (outOfLimitsZ) {
-						if (currentZ > 0) {
-							controls.getObject().position.z = controls.getObject().position.z - 10;
-						} else {
-							controls.getObject().position.z = controls.getObject().position.z + 10;
-						}
-					}
-
-
-				}
-			}
-
-			renderer.render(scene, camera);
 
 		}
 	</script>
