added in walls and floor for cage and bays
bays 1 2 3 added
secure cage transparent
started toilet walls
short wall to side of processing area

--- a/public_html/s2s_factory_v1.html
+++ b/public_html/s2s_factory_v1.html
@@ -326,8 +326,8 @@
 			}
 
 // workstation digits ()
-		//far right desk in phoneRoom
-			createWorkstation(-27 * meter, 0, 3 * meter, 1, addNewStation);
+		//far right desk in phoneRoom location is (x position, ?, Z position, ?, addNewStation)
+			createWorkstation(-31 * meter, 0, 4 * meter, 1, addNewStation);
 
 
 			renderer = new THREE.WebGLRenderer();
