--- a/public_html/s2s_factory_v1.html
+++ b/public_html/s2s_factory_v1.html
@@ -337,9 +337,15 @@
 				}
 
 				// workstation digits ()
-				//far right desk in phoneRoom location is (x position, ?, Z position, ?, addNewStation)
-				createWorkstation(-31 * meter, 0, 4 * meter, 1, addNewStation);
+				//4 desks in phoneRoom location is (x position, ?, Z position, ?, addNewStation)
+				createWorkstation(-30.8 * meter, 0, 4 * meter, 1, addNewStation);
+				createWorkstation(-30.8 * meter, 0, 8 * meter, 1, addNewStation);
+				createWorkstation(-30.8 * meter, 0, 12 * meter, 1, addNewStation);
+				createWorkstation(-30.8 * meter, 0, 0 * meter, 1, addNewStation);
 				createPerson(-29 * meter, 0, 6 * meter, 1, addNewPerson);
+
+				// desks in data erasure room
+				createWorkstation(-27.2 * meter, 0, 4 * meter, 1, addNewStation);
 
 				renderer = new THREE.WebGLRenderer();
 				renderer.setClearColor(0xffffff);
