Texture on walls

--- a/public_html/s2s_factory_v1.html
+++ b/public_html/s2s_factory_v1.html
@@ -215,8 +215,8 @@
 		function addNewPerson(ps) {
 			scene.add(ps.object);
 			objects.push(ps.object);
-			factoryPerson.push(ps);
-			console.log('Person: - ' + person.id + '-, has been added');
+			//factoryPerson.push(ps);
+			//console.log('Person: - ' + person.id + '-, has been added');
 
 		}
 
