--- a/public_html/s2s_factory_v1.html
+++ b/public_html/s2s_factory_v1.html
@@ -41,7 +41,7 @@
 			-webkit-box-align: center;
 			-moz-box-align: center;
 			box-align: center;
-			color: #ffffff;
+			color: #003D6E;
 			text-align: center;
 			cursor: pointer;
 		}
@@ -60,13 +60,15 @@
 	<script src="js/person.js"></script>
 	<script src="js/forklift.js"></script>
 	<script src="js/s2s_mqtt.js"></script>
+	<script src="js/toilet.js"></script>
+	<script src="js/lorry.js"></script>
 
 
 	<div id="blocker">
 
 		<div id="instructions">
-			<span style="font-size:40px">Click to play</span>
-			<br /> (W, A, S, D = Move, SPACE = Jump, MOUSE = Look around)
+			<span style="font-size:40px">Please wait while images load, <br/> Click to play</span>
+			<br /> (W, A, S, D = Move, SPACE = Jump, MOUSE = Look around, Escape to release cursor)
 		</div>
 
 	</div>
@@ -192,16 +194,19 @@
 
 		/*List of all workstations as a custom object, see workstation.js*/
 		var factoryWorkstations = [];
-
+		
 		/*List of all Persons as a custom object, see person.js*/
 		var factoryPersons = [];
 		/*List of all Forklifts as a custom object, see forklift.js*/
 		var factoryForklifts = [];
 		/*List of all cubes as THREE.Mesh*/
 		var factoryWIP = [];
-
+		/*List of all toilets as custom object, see toilet.js*/
+	var factorytoilets = [];
 		/*List of all shelves as a custom object, see wip_shelf.js*/
 		var factoryShelving = [];
+		//lists all lorries in factory as custom object, see lorry.js
+		var factoryLorries = [];
 
 		function addNewStation(ws) {
 			scene.add(ws.object);
@@ -221,12 +226,29 @@
 			//console.log('Person: - ' + person.id + '-, has been added');
 
 		}
+
 		//NOTE KvL forklift blender model credits not required!
 		function addNewForklift(fk) {
 			scene.add(fk.object);
 			objects.push(fk.object);
 			//factoryForklifts.push(ps);
 			//console.log('Forklift: - ' + forklift.id + '-, has been added');
+		}
+		//NOTE KvL toilet json from blender credits not required
+		function addNewToilet(loo) {
+			scene.add(loo.object);
+			objects.push(loo.object);
+			//factorytoilets.push(ps);
+			//console.log('toilet: - ' + toilet.id + '-, has been added');
+
+		}
+
+		//NOTE KvL lorry blender model credits not required!
+		function addNewLorry(lry) {
+			scene.add(lry.object);
+			objects.push(lry.object);
+			//factoryLorries.push(ps);
+			//console.log('Lorry: - ' + Lorry.id + '-, has been added');
 		}
 		function addNewWIP(id) {
 			var _newBox = createNewWIPObj(id);
@@ -347,17 +369,39 @@
 					scene.add(_building[i]);
 				}
 
-				// workstation digits ()
-				//4 desks in phoneRoom location is (x position, ?, Z position, ?, addNewStation)
-				createWorkstation(-30.8 * meter, 0, 4 * meter, -0.1, addNewStation);
-				createWorkstation(-30.8 * meter, 0, 8 * meter, 0, addNewStation);
-				createWorkstation(-30.8 * meter, 0, 12 * meter, 0, addNewStation);
-				createWorkstation(-30.8 * meter, 0, 0 * meter, 0, addNewStation);
-				createPerson(-29 * meter, 0, 6 * meter, 1, addNewPerson);
-				createForklift(-18 * meter, 0, -30 * meter, 0, addNewForklift);
-
+				//4 desks in phoneRoom location is (x position, y position, Z position, rotation in y, id, addNewNamehere)
+				createWorkstation(-30.8 * meter, 0, 4 * meter,  (-Math.PI / 2), '0_refurbD1', addNewStation);
+				createWorkstation(-30.8 * meter, 0, 8 * meter, (-Math.PI / 2), '0_refurbD2', addNewStation);
+				createWorkstation(-30.8 * meter, 0, 12 * meter, (-Math.PI / 2), '0_refurbD3', addNewStation);
+				createWorkstation(-30.8 * meter, 0, 0 * meter,  (-Math.PI / 2), '0_refurbD4', addNewStation);
 				// desks in data erasure room
-				createWorkstation(-27.2 * meter, 0, 4 * meter, 1, addNewStation);
+				createWorkstation(-26.2 * meter, 0, 12 * meter, 0, '0_dataeraseD1', addNewStation);
+
+				//shopfloor person refurbRoom
+				createPerson(-29 * meter, 0, 6 * meter, 0, '0_person1', addNewPerson);
+
+				//forklift near bays
+				createForklift(-18 * meter, 0, -30 * meter, (-Math.PI/2), '0_forklift1', addNewForklift);
+// lorry in bay 1
+createLorry(23 *meter, 0, - 31.5 * meter, (-Math.PI/2), '0_lorryBay1', addNewLorry);
+
+				//toilets accessed from shopfloor
+				createToilet(-28.5 * meter, 0, 26.5* meter, (-Math.PI / 2), '0_toiletShopfloor1', addNewToilet);
+				createToilet(-28.5 * meter, 0, 27.5* meter, (-Math.PI / 2), '0_toiletShopfloor2', addNewToilet);
+				createToilet(-28.5 * meter, 0, 28.5* meter, (-Math.PI / 2), '0_toiletShopfloor3', addNewToilet);
+				createToilet(-27.5 * meter, 0, 26.5* meter, (Math.PI/2), '0_toiletShopfloor4', addNewToilet);
+				createToilet(-27.5 * meter, 0, 27.5* meter, (Math.PI/2), '0_toiletShopfloor5', addNewToilet);
+				createToilet(-27.5 * meter, 0, 28.5* meter, (Math.PI/2), '0_toiletShopfloor6', addNewToilet);
+
+
+				//toilets accessed from lobby
+				createToilet(-21 * meter, 0, 36.5* meter, 0, '0_toiletlobby1', addNewToilet);
+				createToilet(-22 * meter, 0, 36.5* meter, 0, '0_toiletlobby2', addNewToilet);
+				createToilet(-23 * meter, 0, 36.5* meter, 0, '0_toiletlobby3', addNewToilet);
+				createToilet(-19.5 * meter, 0, 33.5* meter, (-Math.PI), '0_toiletlobby4', addNewToilet);
+				createToilet(-20.5 * meter, 0, 33.5* meter, (-Math.PI), '0_toiletlobby5', addNewToilet);
+				createToilet(-21.5* meter, 0, 33.5* meter, (-Math.PI), '0_toiletlobby6', addNewToilet);
+
 
 				renderer = new THREE.WebGLRenderer();
 				renderer.setClearColor(0xffffff);
