--- a/public_html/s2s_factory_v1.html
+++ b/public_html/s2s_factory_v1.html
@@ -65,7 +65,9 @@
 	<script src="js/s2s_mqtt.js"></script>
 	<script src="js/toilet.js"></script>
 	<script src="js/lorry.js"></script>
-
+	<script src="js/shopfloorPerson.js"></script>
+	<script src="js/recyclingBin.js"></script>
+	<script src="js/shelving.js"></script>
 
 	<div id="blocker">
 
@@ -200,8 +202,13 @@
 
 		/*List of all Persons as a custom object, see person.js*/
 		var factoryPersons = [];
+		var shopfloorPersons = [];
 		/*List of all Forklifts as a custom object, see forklift.js*/
 		var factoryForklifts = [];
+
+		var factoryBleuShelving = [];
+
+		var factoryrecyclingBins = [];
 		/*List of all cubes as THREE.Mesh*/
 		var factoryWIP = [];
 		/*List of all toilets as custom object, see toilet.js*/
@@ -222,7 +229,7 @@
 			factoryShelving.push(newShelf);
 		}
 		//NOTE human json figure from blender. Use of this figure requires CREDIT to be given to tweediez
-		function addNewPerson(ps) {
+		function addNewOfficePerson(ps) {
 			scene.add(ps.object);
 			objects.push(ps.object);
 			//factoryPerson.push(ps);
@@ -237,7 +244,24 @@
 			//factoryForklifts.push(ps);
 			//console.log('Forklift: - ' + forklift.id + '-, has been added');
 		}
+		//NOTE KvL person blender model credits not required!
+		function addNewShopFloorPerson(sfp) {
+			scene.add(sfp.object);
+			objects.push(sfp.object);
 
+		}
+		//NOTE KvL person blender model credits not required!
+		function addNewBlueShelving(blueS) {
+			scene.add(blueS.object);
+			objects.push(blueS.object);
+
+		}
+		//NOTE KvL recycling bin blender model credits not required!
+		function addNewrecycleBin(bin) {
+			scene.add(bin.object);
+			objects.push(bin.object);
+
+		}
 		//NOTE KvL toilet json from blender credits not required
 		function addNewToilet(loo) {
 			scene.add(loo.object);
@@ -393,10 +417,23 @@
 					createWorkstation(-30.8 * meter, 0, 0 * meter, (-Math.PI / 2), '0_refurbD4', addNewStation);
 					// desks in data erasure room
 					createWorkstation(-26.2 * meter, 0, 12 * meter, 0, '0_dataeraseD1', addNewStation);
+					//recycling bins
+					createRecycleBin(-10 * meter, 0, 12 * meter, 0, '0_bin1', addNewrecycleBin);
+					createRecycleBin(-12 * meter, 0, 12 * meter, 0, '0_bin1', addNewrecycleBin);
+					createRecycleBin(-14 * meter, 0, 12 * meter, 0, '0_bin1', addNewrecycleBin);
+					createRecycleBin(-16 * meter, 0, 12 * meter, 0, '0_bin1', addNewrecycleBin);
+					createRecycleBin(-10 * meter, 0, 10 * meter, 0, '0_bin1', addNewrecycleBin);
+					createRecycleBin(-12 * meter, 0, 10 * meter, 0, '0_bin1', addNewrecycleBin);
+					createRecycleBin(-14 * meter, 0, 10 * meter, 0, '0_bin1', addNewrecycleBin);
+					createRecycleBin(-16 * meter, 0, 10 * meter, 0, '0_bin1', addNewrecycleBin);
+					createShopFloorPerson(-10 * meter, 0, 13 * meter, 0, '0_shopfloorpersonBin1', addNewShopFloorPerson);
 
 					//shopfloor person refurbRoom
-					createPerson(-29 * meter, 0, 6 * meter, 0, '0_person1', addNewPerson);
+					createOfficePerson(-29 * meter, 0, 6 * meter, 0, '0_person1', addNewOfficePerson);
+					createShopFloorPerson(-25 * meter, 0, 6 * meter, 0, '0_shopfloorperson1', addNewShopFloorPerson);
 
+					//blue shelving refurbRoom
+					//createBlueShelving(-28 * meter, 0, 6 * meter, 0, '0_shelving1', addNewBlueShelving);
 					//forklift near bays
 					createForklift(-18 * meter, 0, -30 * meter, (-Math.PI / 2), '0_forklift1', addNewForklift);
 					// lorry in bay 1
