--- a/public_html/moving_around_with_table.html
+++ b/public_html/moving_around_with_table.html
@@ -183,7 +183,7 @@
 			scene = new THREE.Scene();
 			scene.fog = new THREE.Fog(0xffffff, 0, 750);
 
-			var light = new THREE.HemisphereLight(0xeeeeff, 0x777788, 0.75);
+			var light = new THREE.HemisphereLight(0x000000, 0x777788, 0.75);
 			light.position.set(0.5, 1, 0.75);
 			scene.add(light);
 
